<resources>
    <string name="app_name">Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules">Rules</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="welcome_quiz_app">Welcome \nto \nQuiz App</string>
    <string name="exit_quiz">Exit the Quiz</string>
    <string name="next_question">Next Question</string>
    <string name="_30">30</string>
    <string name="exit_rules">exit rules</string>
    <string name="rule1">1. You will have 10 questions in total.</string>
    <string name="rule2">2. You will have 30 seconds for each question.</string>
    <string name="rule3">3. You can\'t edit previous answers, so mark your answer carefully.</string>
    <string name="best_of_luck">Best of Luck 👍</string>
    <string name="go_to_home">Go To Home</string>
    <string name="score">x/y</string>
    <string name="your_score_is">Your Score is :</string>
    <string name="time_up">⏲️</string>
    <string name="score_">%1$s/10</string>
    <string name="question">%1$s. %2$s</string>
    <string name="options">%1$s. %2$s</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="leave_quiz">Leave Quiz ?</string>
    <string name="exited_the_quiz">Exited the Quiz</string>
    <string name="no_options_selected">No Options selected</string>
    <string name="finish">Finish</string>
    <string name="sign_in_here">\ Sign in here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email_address_to_get_the_password_reset_link">Enter your email address to get the password reset link.</string>
    <string name="email_address">Email Address</string>
    <string name="sample_email">hello@example.com</string>
    <string name="password_reset">Reset Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="welcome_back_to_the_app">Welcome back to the Quiz app</string>
    <string name="password">Password</string>
    <string name="sample_password">••••••••••••••••••••</string>
    <string name="welcome_to_the_app">Welcome to the Quiz app</string>
    <string name="message">Congratulations\nLogin Successful</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="success_message_">We\'ve sent you a verification email, please check your inbox and follow the instructions to verify your account.\n\nThank you for signing up with us!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="web_client_id">666562301436-ev0ttfbmpme434d88u7tcvu1e29fvpb4.apps.googleusercontent.com</string>
</resources>