<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_back_to_the_app"
        android:textColor="@color/dim_gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/emailEditText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/sample_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/emailEditText2"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText2" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/sample_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageButton
        android:id="@+id/viewPasswordButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText2"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText2"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText2"
        app:srcCompat="@drawable/show_password"
        app:tint="@color/gray" />

    <TextView
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText2"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText2" />

    <Button
        android:id="@+id/loginButton2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText2" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/create_an_account"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleSignInButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/light_grey"
        android:drawableLeft="@drawable/google"
        android:text="Continue with Google"
        android:textColor="@color/dim_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:scaleType="centerCrop"
        android:tint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/signInMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signInMessage"
        app:layout_constraintTop_toTopOf="@+id/signInMessage"
        app:srcCompat="@drawable/line" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signInMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="or sign in with"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/line2"
        app:layout_constraintEnd_toStartOf="@+id/line1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/line2"
        app:layout_constraintTop_toTopOf="@+id/line2" />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:tint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/googleSignInButton"
        app:layout_constraintEnd_toStartOf="@+id/signInMessage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton2"
        app:srcCompat="@drawable/line" />

</androidx.constraintlayout.widget.ConstraintLayout>