<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ghost_white"
    tools:context=".ScoreActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/score_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:fontFamily="@font/abril_fatface"
            android:padding="10dp"
            android:text="@string/your_score_is"
            android:textColor="@color/floral_white"
            android:textSize="40sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <TextView
            android:id="@+id/showScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white_smoke"
            android:fontFamily="@font/abril_fatface"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/score"
            android:textColor="@color/blue"
            android:textSize="40sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/goToHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/abril_fatface"
        android:padding="20dp"
        android:text="@string/go_to_home"
        android:textColor="@color/floral_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView8"
        app:strokeColor="@color/antique_white"
        app:strokeWidth="3dp" />
</androidx.constraintlayout.widget.ConstraintLayout>